// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestActions Defaults should match the snapshots 1`] = `
Object {
  "chunk": "{\\"foo\\":1}",
  "headers": Object {
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`RequestActions Defaults should match the snapshots 2`] = `
Object {
  "chunk": "alma",
  "headers": Object {
    "Content-Type": "plain/text",
  },
  "statusCode": 200,
}
`;

exports[`RequestActions Defaults should match the snapshots 3`] = `
Object {
  "chunk": "alma",
  "headers": Object {
    "Content-Type": "application/xml;charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`RequestActions Defaults should match the snapshots 4`] = `
Object {
  "headers": Object {},
  "statusCode": 200,
}
`;

exports[`RequestActions Defaults should match the snapshots 5`] = `
Object {
  "chunk": "BypassResult",
}
`;
